--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
@@ -26,9 +26,33 @@
         </ul>
         <hr />
 
+        @if (TempData["MensagemSucesso"] != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong>@TempData["MensagemSucesso"]</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
+
+        @if (TempData["MensagemErro"] != null)
+        {
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                <strong>@TempData["MensagemErro"]</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        }
+
         @RenderBody()
 
     </div>
+
+    <!-- Referência dos arquivos JavaScript do bootstrao e jquery -->
+    <script src="~/js/jquery-3.5.1.min.js"></script>
+    <script src="~/js/bootstrap.js"></script>
 
 </body>
 </html>
