--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Cliente/Consulta.cshtml
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Cliente/Consulta.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model List<Projeto.Repository.Entities.Cliente>
+
 @{    
     Layout = "~/Views/Shared/Layout.cshtml";
 }
@@ -15,19 +16,28 @@
         </tr>
     </thead>
     <tbody>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td>
-                <a href="#" class="btn btn-primary btn-sm">Atualizar</a>
-                <a href="#" class="btn btn-danger btn-sm">Excluir</a>
-            </td>
-        </tr>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.Nome</td>
+                <td>@item.Email</td>
+                <td>@item.Cpf</td>
+                <td>
+                    <a href="/Cliente/Edicao?id=@item.IdCliente" class="btn btn-primary btn-sm">
+                        Atualizar
+                    </a>
+                    <a href="/Cliente/Exclusao?id=@item.IdCliente" 
+                       onclick="return confirm('Deseja realmente excluir o cliente?');" class="btn btn-danger btn-sm">
+                        Excluir
+                    </a>
+                </td>
+            </tr>
+        }
+
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="4">Quantidade de clientes: 0</td>
+            <td colspan="4">Quantidade de clientes: @Model.Count()</td>
         </tr>
     </tfoot>
 </table>
