--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Cliente/Edicao.cshtml
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Cliente/Edicao.cshtml
@@ -1,15 +1,52 @@
-﻿
+﻿@model Projeto.Presentation.Mvc.Models.ClienteEdicaoModel
+
 @{
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
 <h5>Atualização de Cliente</h5>
-<br />
-<br />
 
-<div class="text-danger">
-    @Html.ValidationSummary()
-</div>
+@using (Html.BeginForm())
+{
+    <!-- campo oculto -->
+    @Html.HiddenFor(model => model.IdCliente)
 
+    <label>Nome do Cliente:</label>
+    @Html.TextBoxFor(model => model.Nome,
+        new
+        {
+            @class = "form-control col-md-4",
+            @placeholder = "Digite aqui"
+        })
+    <br />
 
+    <label>Email:</label>
+    @Html.TextBoxFor(model => model.Email,
+        new
+        {
+            @class = "form-control col-md-4",
+            @placeholder = "Digite aqui"
+        })
+    <br />
 
+    <label>CPF:</label>
+    @Html.TextBoxFor(model => model.Cpf,
+        new
+        {
+            @class = "form-control col-md-4",
+            @placeholder = "Digite aqui"
+        })
+    <br />
+
+    <label>Data de Nascimento:</label>
+    @Html.TextBoxFor(model => model.DataNascimento,
+        new
+        {
+            @class = "form-control col-md-4",
+            @placeholder = "Digite aqui"
+        })
+    <br />
+
+    <input type="submit" class="btn btn-success"
+           value="Salvar Alterações" />
+}
