--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Dependente/Consulta.cshtml
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Dependente/Consulta.cshtml
@@ -6,6 +6,26 @@
 
 <h5>Consulta de Dependentes</h5>
 
+@using (Html.BeginForm())
+{
+    <div class="row">
+        <div class="col-md-6">
+            <div class="form-row">
+                <div class="col">
+                    <input name="nome" type="text" class="form-control"
+                           placeholder="Informe o nome do dependente"
+                           value="@TempData["Nome"]"
+                           autocomplete="off">
+                </div>
+                <div class="col">
+                    <input type="submit" value="Pesquisar Dependentes"
+                           class="btn btn-secondary" />
+                </div>
+            </div>
+        </div>
+    </div>
+}
+
 <table class="table table-hover table-striped">
     <thead>
         <tr>
@@ -20,7 +40,7 @@
         {
             <tr>
                 <td>@item.Nome</td>
-                <td>@item.DataNascimento</td>
+                <td>@item.DataNascimento.ToString("dd/MM/yyyy")</td>
                 <td>@item.IdCliente</td>
                 <td>
                     <a href="/Dependente/Edicao?id=@item.IdDependente" class="btn btn-primary btn-sm">
