--- a/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
+++ b/ProjetoMVC01/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
@@ -15,7 +15,6 @@
 
     </head>
     <body>
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Projeto MVC 01</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,7 +48,7 @@
             </div>
         </nav>
 
-        <div class="container mt-3">
+        <div class="container mt-3 mb-3">
 
             <h3>Sistema de Controle de Clientes</h3>
             <p>Treinamento em C# WebDeveloper - COTI Informática</p>
@@ -75,13 +74,14 @@
                 </div>
             }
 
+
             @RenderBody()
 
         </div>
-
         <!-- Referencia dos arquivos JavaScript do bootstrap e jquery -->
         <script src="~/js/jquery-3.5.1.min.js"></script>
         <script src="~/js/bootstrap.js"></script>
 
     </body>
+
 </html>
