--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Account/Login.cshtml
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Account/Login.cshtml
@@ -1,7 +1,4 @@
-﻿
-@{
-    Layout = null;
-}
+﻿@model Projeto.Presentation.Mvc.Models.AccountLoginModel
 
 <!DOCTYPE html>
 
@@ -10,20 +7,58 @@
     <meta name="viewport" content="width=device-width" />
     <title>Login</title>
 
-    <!-- Referencia dos arquivos CSS do Bootstrap -->
+    <!-- Referência dos arquivos CSS do Bootstrap -->
     <link href="~/css/bootstrap.css" rel="stylesheet" />
 
 </head>
 <body>
 
-    <div class="container mt-3">
-        <h3>Acesso ao Sistema</h3>
+<div class="container mt-3">
 
-    </div>
+<h3>Acesso ao Sistema</h3>
+
+@using (Html.BeginForm())
+{
+    <label>Email de Acesso:</label>
+    @Html.TextBoxFor(model => model.Email,
+        new
+                {
+            @class = "form-control col-md-4",
+            @placeholder = "Digite aqui"
+        })
+    <span class="text-danger">
+        @Html.ValidationMessageFor(model => model.Email)
+    </span>
+    <br />
+
+    <label>Senha de Acesso:</label>
+    @Html.PasswordFor(model => model.Senha,
+        new
+                {
+            @class = "form-control col-md-4",
+            @placeholder = "Digite aqui"
+        })
+    <span class="text-danger">
+        @Html.ValidationMessageFor(model => model.Senha)
+    </span>
+    <br />
+
+    <input type="submit" class="btn btn-sm btn-dark"
+            value="Acessar Sistema" />
 
 
-    <!-- Referência doa arquivos JS (JavaScript) -->
+
+    <a href="/Account/Register" class="btn btn-sm btn-secondary">
+        Criar Conta de Usuário
+    </a>
+
+}
+
+</div>
+
+    <!-- Referência dos arquivos JS (JavaScript) -->
     <script src="~/js/jquery-3.5.1.min.js"></script>
     <script src="~/js/bootstrap.js"></script>
+
 </body>
 </html>
