--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Account/Login.cshtml
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Account/Login.cshtml
@@ -13,48 +13,59 @@
 </head>
 <body>
 
-<div class="container mt-3">
+    <div class="container mt-3">
+        <center>
+            <h3>Acesso ao Sistema</h3>
 
-<h3>Acesso ao Sistema</h3>
+            @if (TempData["MensagemErro"] != null)
+            {
+                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                    <strong>@TempData["MensagemErro"]</strong>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            }
 
-@using (Html.BeginForm())
-{
-    <label>Email de Acesso:</label>
-    @Html.TextBoxFor(model => model.Email,
-        new
-                {
-            @class = "form-control col-md-4",
-            @placeholder = "Digite aqui"
-        })
-    <span class="text-danger">
-        @Html.ValidationMessageFor(model => model.Email)
-    </span>
-    <br />
+            @using (Html.BeginForm())
+            {
+                <label>Email de Acesso:</label>
+                @Html.TextBoxFor(model => model.Email,
+                    new
+                            {
+                        @class = "form-control col-md-4",
+                        @placeholder = "Digite aqui"
+                    })
+                <span class="text-danger">
+                    @Html.ValidationMessageFor(model => model.Email)
+                </span>
+                <br />
 
-    <label>Senha de Acesso:</label>
-    @Html.PasswordFor(model => model.Senha,
-        new
-                {
-            @class = "form-control col-md-4",
-            @placeholder = "Digite aqui"
-        })
-    <span class="text-danger">
-        @Html.ValidationMessageFor(model => model.Senha)
-    </span>
-    <br />
+                <label>Senha de Acesso:</label>
+                @Html.PasswordFor(model => model.Senha,
+                    new
+                            {
+                        @class = "form-control col-md-4",
+                        @placeholder = "Digite aqui"
+                    })
+                <span class="text-danger">
+                    @Html.ValidationMessageFor(model => model.Senha)
+                </span>
+                <br />
 
-    <input type="submit" class="btn btn-sm btn-dark"
-            value="Acessar Sistema" />
+                <input type="submit" class="btn btn-sm btn-dark"
+                       value="Acessar Sistema" />
 
 
 
-    <a href="/Account/Register" class="btn btn-sm btn-secondary">
-        Criar Conta de Usuário
-    </a>
+                <a href="/Account/Register" class="btn btn-sm btn-secondary">
+                    Criar Conta de Usuário
+                </a>
 
-}
+            }
+        </center>
 
-</div>
+    </div>
 
     <!-- Referência dos arquivos JS (JavaScript) -->
     <script src="~/js/jquery-3.5.1.min.js"></script>
