--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
@@ -15,32 +15,46 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Minha Agenda</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+    <div class="container-md col-md-12">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <a class="navbar-brand" href="#">Minha Agenda</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/Agenda/Index">Página inicial <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Gerenciar Compromissos
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/Agenda/CadastroCompromisso">Cadastrar Compromissos</a>
-                        <a class="dropdown-item" href="/Agenda/ConsultaCompromisso">Consultar Compromissos</a>
-                    </div>
-                </li>
-            </ul>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/Agenda/Index">Página inicial <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Gerenciar Compromissos
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="/Agenda/CadastroCompromisso">Cadastrar Compromissos</a>
+                            <a class="dropdown-item" href="/Agenda/ConsultaCompromisso">Consultar Compromissos</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+
+        <div class="container mt-3">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Sistema de Controle de Agenda</h5>
+                </div>
+
+                <div class="col-md-6 text-right">
+                    Usuario autenticado: <strong>@User.Identity.Name</strong> | <a href="/Account/Logout">Sair do Sistema</a>
+                </div>
+            </div>
+            <hr />
+
+            @RenderBody()
         </div>
-    </nav>
-
-    <div class="container mt-3">
-        @RenderBody()
     </div>
 
     <script src="~/js/jquery-3.5.1.min.js"></script>
@@ -48,6 +62,3 @@
 
 </body>
 </html>
-
-
-==========
