--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Agenda/ConsultaCompromisso.cshtml
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Agenda/ConsultaCompromisso.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model List<Projeto.Infra.Data.Entities.Compromisso>
+
+@{
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
@@ -9,11 +11,13 @@
     <div class="row">
         <div class="col-md-3">
             <label>Data de:</label>
-            <input type="date" name="DataMin" class="form-control" />
+            <input type="date" name="DataMin" class="form-control"
+                   value="@TempData["DataMin"]" />
         </div>
         <div class="col-md-3">
             <label>Até:</label>
-            <input type="date" name="DataMax" class="form-control" />
+            <input type="date" name="DataMax" class="form-control"
+                   value="@TempData["DataMax"]" />
         </div>
     </div>
     <div class="row mt-2">
@@ -26,34 +30,62 @@
 
 <br />
 
-<table class="table table-bordered table-hover table-striped">
-    <thead>
-        <tr>
-            <th>Título do Compromisso</th>
-            <th>Data/Hora de Início</th>
-            <th>Data/Hora de Término</th>
-            <th>Operações</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>-</td>
-            <td>-</td>
-            <td>-</td>
-            <td>
-                <a href="#" class="btn btn-sm btn-primary">Atualizar</a>
-                <a href="#" class="btn btn-sm btn-danger">Excluir</a>
-            </td>
-        </tr>
-    </tbody>
-    <tfoot>
-        <tr>
-            <td colspan="4">
-                Quantidade de compromissos: 0
-            </td>
-        </tr>
-    </tfoot>
-</table>
-
-
-
+@if (Model != null)
+{
+    if (Model.Count == 0)
+    {
+        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>Nenhum compromisso foi encontrado para o período informado.</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+    }
+    else
+    {
+        <table class="table table-bordered table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>Título do Compromisso</th>
+                    <th>Data/Hora de Início</th>
+                    <th>Data/Hora de Término</th>
+                    <th>Operações</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>@item.Titulo</td>
+                        <td>
+                            @item.DataInicio.ToString("dd/MM/yyyy") às
+                            @item.HoraInicio.ToString(@"hh\:mm")
+                        </td>
+                        <td>
+                            @item.DataFim.ToString("dd/MM/yyyy") às
+                            @item.HoraFim.ToString(@"hh\:mm")
+                        </td>
+                        <td>
+                            <a href="/Agenda/EdicaoCompromisso?id=@item.IdCompromisso"
+                               class="btn btn-sm btn-primary">
+                                Atualizar
+                            </a>
+                            <a href="/Agenda/ExclusaoCompromisso?id=@item.IdCompromisso"
+                               onclick="return confirm('Deseja realmente excluir este registro?');"
+                               class="btn btn-sm btn-danger">
+                                Excluir
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="4">
+                        Quantidade de compromissos: @Model.Count
+                    </td>
+                </tr>
+            </tfoot>
+        </table>
+    }
+}
