--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Agenda/Index.cshtml
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Agenda/Index.cshtml
@@ -1,7 +1,11 @@
-﻿
-@{
+﻿@{
     Layout = "~/Views/Shared/Layout.cshtml";
 }
 
-<h5>Bem vindo ao Sistema</h5>
+<h5>Seja bem vindo ao Sistema!</h5>
 
+<a href="/Agenda/GerarRelatorio" class="btn btn-primary btn-sm">
+    Gerar Relatório de Compromissos
+</a>
+
+<br />
