aula 16 - gerando um gráfico - projeto concluído

--- a/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
+++ b/ProjetoMVC02/Projeto.Presentation.Mvc/Views/Shared/Layout.cshtml
@@ -78,5 +78,8 @@
     <script src="~/js/jquery-3.5.1.min.js"></script>
     <script src="~/js/bootstrap.js"></script>
 
+    <!-- Seção para inserir código JavaScript-->
+    @RenderSection("scripts", required: false)
+
 </body>
 </html>
